# yapper

./: .gitignore  README.md  pyproject.toml
notebooks/: data-curation.ipynb  model-training.ipynb
