[project]
name = "yapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "google-genai>=1.49.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mwparserfromhell>=0.7.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "semchunk>=3.2.5",
    "tqdm>=4.67.1",
]
