[project]
name = "yapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.48.2",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "google-genai>=1.49.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mwparserfromhell>=0.7.2",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-slugify>=8.0.4",
    "scikit-learn>=1.7.2",
    "semchunk>=3.2.5",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "transformers==4.56.2",
    "unsloth>=2025.11.2",
    "vllm>=0.11.0",
]
